crates/pg_syntax/tests/snapshots/postgres_regress/subselect@206.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from\n  (select 9 as x, unnest(array[1,2,3,11,12,13]) as u) ss\n  where tattle(x, u);"
---
SelectStmt@0..92
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Newline@13..14 "\n"
  Whitespace@14..16 "  "
  Ascii40@16..17 "("
  RangeSubselect@17..70
    SelectStmt@17..66
      Select@17..23 "select"
      Whitespace@23..24 " "
      ResTarget@24..30
        AConst@24..25
          Iconst@24..25 "9"
        Whitespace@25..26 " "
        As@26..28 "as"
        Whitespace@28..29 " "
        Ident@29..30 "x"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      ResTarget@32..66
        FuncCall@32..59
          Ident@32..38 "unnest"
          Ascii40@38..39 "("
          AArrayExpr@39..59
            Array@39..44 "array"
            Ascii91@44..45 "["
            AConst@45..46
              Iconst@45..46 "1"
            Ascii44@46..47 ","
            AConst@47..48
              Iconst@47..48 "2"
            Ascii44@48..49 ","
            AConst@49..50
              Iconst@49..50 "3"
            Ascii44@50..51 ","
            AConst@51..53
              Iconst@51..53 "11"
            Ascii44@53..54 ","
            AConst@54..56
              Iconst@54..56 "12"
            Ascii44@56..57 ","
            AConst@57..59
              Iconst@57..59 "13"
        Ascii93@59..60 "]"
        Ascii41@60..61 ")"
        Whitespace@61..62 " "
        As@62..64 "as"
        Whitespace@64..65 " "
        Ident@65..66 "u"
    Ascii41@66..67 ")"
    Whitespace@67..68 " "
    Alias@68..70
      Ident@68..70 "ss"
  Newline@70..71 "\n"
  Whitespace@71..73 "  "
  Where@73..78 "where"
  Whitespace@78..79 " "
  FuncCall@79..90
    Ident@79..85 "tattle"
    Ascii40@85..86 "("
    ColumnRef@86..87
      Ident@86..87 "x"
    Ascii44@87..88 ","
    Whitespace@88..89 " "
    ColumnRef@89..90
      Ident@89..90 "u"
  Ascii41@90..91 ")"
  Ascii59@91..92 ";"

