crates/pg_syntax/tests/snapshots/postgres_regress/subselect@209.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into sq_limit values\n    (1, 1, 1),\n    (2, 2, 2),\n    (3, 3, 3),\n    (4, 4, 4),\n    (5, 1, 1),\n    (6, 2, 2),\n    (7, 3, 3),\n    (8, 4, 4);"
---
InsertStmt@0..147
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "sq_limit"
  Whitespace@20..21 " "
  SelectStmt@21..145
    Values@21..27 "values"
    Newline@27..28 "\n"
    Whitespace@28..32 "    "
    Ascii40@32..33 "("
    List@33..40
      AConst@33..34
        Iconst@33..34 "1"
      Ascii44@34..35 ","
      Whitespace@35..36 " "
      AConst@36..37
        Iconst@36..37 "1"
      Ascii44@37..38 ","
      Whitespace@38..39 " "
      AConst@39..40
        Iconst@39..40 "1"
    Ascii41@40..41 ")"
    Ascii44@41..42 ","
    Newline@42..43 "\n"
    Whitespace@43..47 "    "
    Ascii40@47..48 "("
    List@48..55
      AConst@48..49
        Iconst@48..49 "2"
      Ascii44@49..50 ","
      Whitespace@50..51 " "
      AConst@51..52
        Iconst@51..52 "2"
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..55
        Iconst@54..55 "2"
    Ascii41@55..56 ")"
    Ascii44@56..57 ","
    Newline@57..58 "\n"
    Whitespace@58..62 "    "
    Ascii40@62..63 "("
    List@63..70
      AConst@63..64
        Iconst@63..64 "3"
      Ascii44@64..65 ","
      Whitespace@65..66 " "
      AConst@66..67
        Iconst@66..67 "3"
      Ascii44@67..68 ","
      Whitespace@68..69 " "
      AConst@69..70
        Iconst@69..70 "3"
    Ascii41@70..71 ")"
    Ascii44@71..72 ","
    Newline@72..73 "\n"
    Whitespace@73..77 "    "
    Ascii40@77..78 "("
    List@78..85
      AConst@78..79
        Iconst@78..79 "4"
      Ascii44@79..80 ","
      Whitespace@80..81 " "
      AConst@81..82
        Iconst@81..82 "4"
      Ascii44@82..83 ","
      Whitespace@83..84 " "
      AConst@84..85
        Iconst@84..85 "4"
    Ascii41@85..86 ")"
    Ascii44@86..87 ","
    Newline@87..88 "\n"
    Whitespace@88..92 "    "
    Ascii40@92..93 "("
    List@93..100
      AConst@93..94
        Iconst@93..94 "5"
      Ascii44@94..95 ","
      Whitespace@95..96 " "
      AConst@96..97
        Iconst@96..97 "1"
      Ascii44@97..98 ","
      Whitespace@98..99 " "
      AConst@99..100
        Iconst@99..100 "1"
    Ascii41@100..101 ")"
    Ascii44@101..102 ","
    Newline@102..103 "\n"
    Whitespace@103..107 "    "
    Ascii40@107..108 "("
    List@108..115
      AConst@108..109
        Iconst@108..109 "6"
      Ascii44@109..110 ","
      Whitespace@110..111 " "
      AConst@111..112
        Iconst@111..112 "2"
      Ascii44@112..113 ","
      Whitespace@113..114 " "
      AConst@114..115
        Iconst@114..115 "2"
    Ascii41@115..116 ")"
    Ascii44@116..117 ","
    Newline@117..118 "\n"
    Whitespace@118..122 "    "
    Ascii40@122..123 "("
    List@123..130
      AConst@123..124
        Iconst@123..124 "7"
      Ascii44@124..125 ","
      Whitespace@125..126 " "
      AConst@126..127
        Iconst@126..127 "3"
      Ascii44@127..128 ","
      Whitespace@128..129 " "
      AConst@129..130
        Iconst@129..130 "3"
    Ascii41@130..131 ")"
    Ascii44@131..132 ","
    Newline@132..133 "\n"
    Whitespace@133..137 "    "
    Ascii40@137..138 "("
    List@138..145
      AConst@138..139
        Iconst@138..139 "8"
      Ascii44@139..140 ","
      Whitespace@140..141 " "
      AConst@141..142
        Iconst@141..142 "4"
      Ascii44@142..143 ","
      Whitespace@143..144 " "
      AConst@144..145
        Iconst@144..145 "4"
  Ascii41@145..146 ")"
  Ascii59@146..147 ";"

