crates/pg_syntax/tests/snapshots/postgres_regress/subselect@21.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO SUBSELECT_TBL VALUES (8, 9, NULL);"
---
InsertStmt@0..46
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "SUBSELECT_TBL"
  Whitespace@25..26 " "
  SelectStmt@26..44
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..44
      AConst@34..35
        Iconst@34..35 "8"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      AConst@37..38
        Iconst@37..38 "9"
      Ascii44@38..39 ","
      Whitespace@39..40 " "
      AConst@40..44
        NullP@40..44 "NULL"
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

