crates/pg_syntax/tests/snapshots/postgres_regress/subselect@210.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create function explain_sq_limit() returns setof text language plpgsql as\n$$\ndeclare ln text;\nbegin\n    for ln in\n        explain (analyze, summary off, timing off, costs off)\n        select * from (select pk,c2 from sq_limit order by c1,pk) as x limit 3\n    loop\n        ln := regexp_replace(ln, 'Memory: \\S*',  'Memory: xxx');\n        return next ln;\n    end loop;\nend;\n$$;"
---
CreateFunctionStmt@0..375
  Create@0..6 "create"
  Whitespace@6..7 " "
  Function@7..15 "function"
  Whitespace@15..16 " "
  Ident@16..32 "explain_sq_limit"
  Ascii40@32..33 "("
  Ascii41@33..34 ")"
  Whitespace@34..35 " "
  Returns@35..42 "returns"
  Whitespace@42..43 " "
  Setof@43..48 "setof"
  Whitespace@48..49 " "
  TypeName@49..53
    TextP@49..53 "text"
  Whitespace@53..54 " "
  DefElem@54..70
    Language@54..62 "language"
    Whitespace@62..63 " "
    Ident@63..70 "plpgsql"
  Whitespace@70..71 " "
  DefElem@71..374
    As@71..73 "as"
    Newline@73..74 "\n"
    List@74..374
      Sconst@74..374 "$$\ndeclare ln text;\nb ..."
  Ascii59@374..375 ";"

