crates/pg_syntax/tests/snapshots/postgres_regress/subselect@211.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select * from explain_sq_limit();
---
SelectStmt@0..33
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..30
    List@14..30
      FuncCall@14..30
        Ident@14..30 "explain_sq_limit"
  Ascii40@30..31 "("
  Ascii41@31..32 ")"
  Ascii59@32..33 ";"

