crates/pg_syntax/tests/snapshots/postgres_regress/subselect@22.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM SUBSELECT_TBL;
---
SelectStmt@0..28
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..27
    Ident@14..27 "SUBSELECT_TBL"
  Ascii59@27..28 ";"

