crates/pg_syntax/tests/snapshots/postgres_regress/subselect@32.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select q1, float8(count(*)) / (select count(*) from int8_tbl)\nfrom int8_tbl group by q1 order by q1;"
---
SelectStmt@0..100
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "q1"
  Ascii44@9..10 ","
  Whitespace@10..11 " "
  ResTarget@11..60
    AExpr@11..60
      FuncCall@11..25
        Ident@11..17 "float8"
        Ascii40@17..18 "("
        FuncCall@18..25
          Ident@18..23 "count"
          Ascii40@23..24 "("
          Ascii42@24..25 "*"
      Ascii41@25..26 ")"
      Ascii41@26..27 ")"
      Whitespace@27..28 " "
      Ascii47@28..29 "/"
      Whitespace@29..30 " "
      SubLink@30..60
        SelectStmt@30..60
          Ascii40@30..31 "("
          Select@31..37 "select"
          Whitespace@37..38 " "
          ResTarget@38..45
            FuncCall@38..45
              Ident@38..43 "count"
              Ascii40@43..44 "("
              Ascii42@44..45 "*"
          Ascii41@45..46 ")"
          Whitespace@46..47 " "
          From@47..51 "from"
          Whitespace@51..52 " "
          RangeVar@52..60
            Ident@52..60 "int8_tbl"
  Ascii41@60..61 ")"
  Newline@61..62 "\n"
  From@62..66 "from"
  Whitespace@66..67 " "
  RangeVar@67..75
    Ident@67..75 "int8_tbl"
  Whitespace@75..76 " "
  GroupP@76..81 "group"
  Whitespace@81..82 " "
  By@82..84 "by"
  Whitespace@84..85 " "
  ColumnRef@85..87
    Ident@85..87 "q1"
  Whitespace@87..88 " "
  SortBy@88..99
    Order@88..93 "order"
    Whitespace@93..94 " "
    By@94..96 "by"
    Whitespace@96..97 " "
    ColumnRef@97..99
      Ident@97..99 "q1"
  Ascii59@99..100 ";"

