crates/pg_syntax/tests/snapshots/postgres_regress/subselect@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM ((SELECT 1 AS x)) ss;
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  Ascii40@14..15 "("
  Ascii40@15..16 "("
  RangeSubselect@16..34
    SelectStmt@16..29
      Select@16..22 "SELECT"
      Whitespace@22..23 " "
      ResTarget@23..29
        AConst@23..24
          Iconst@23..24 "1"
        Whitespace@24..25 " "
        As@25..27 "AS"
        Whitespace@27..28 " "
        Ident@28..29 "x"
    Ascii41@29..30 ")"
    Ascii41@30..31 ")"
    Whitespace@31..32 " "
    Alias@32..34
      Ident@32..34 "ss"
  Ascii59@34..35 ";"

